[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
chrono = {version = "0.4.19", features = ["serde"]}
uuid = {version = "1.1.2", features = ["serde", "v4"]}
derive_more = "0.99.17"
