[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
derive_more = "0.99"
serde_derive = "1.0"
